fix: navbar text wrapping

--- a/src/app/features/base/components/navbar/navbar.component.scss
+++ b/src/app/features/base/components/navbar/navbar.component.scss
@@ -36,6 +36,7 @@ label {
 .container {
   display: flex;
   align-items: center;
+  white-space: nowrap;
   gap: vars.$space-sm;
 }
 
